[package]
name = "cpsaveinfo"
version = "0.1.0"
authors = ["Lars Viklund <zao@zao.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
byteorder = "1.3"
js-sys = "0.3"
log = "0.4"
nom = "6"
yew = "0.17"
wasm-bindgen = "0.2.69"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
    "BinaryType",
    "DragEvent",
    "DataTransfer",
    "FileList",
    "HtmlPreElement",
]